[package]
name = "advent_of_code_2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
chrono-tz = "0.8.4"
clap = { version = "4.4.10", features = ["derive"] }
ex = "0.1.3"
http_req = { version = "0.10.1", features = ["rustls", "rust-tls"], default-features = false }
regex = "1.10.2"
